--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 #container {
     border: 4px solid black;
     display: flex;
+    width: 320px;
+    height: 320px;
+}
+
+.slider {
+    color: pink;
 }
