--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
 #container {
-    border: 4px solid black;
+    display: flex;
+}
+
+#color-section {
+    display: flex;
+    margin-right: 30px;
+}
+
+#grid-container {
+    outline: 4px solid black;
     display: flex;
     width: 320px;
     height: 320px;
@@ -9,6 +18,15 @@
     display: block;
 }
 
+
 .slider {
     color: pink;
+}
+
+.color-div {
+    outline: 2px solid black;
+    width: 16px;
+    height: 16px;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
