--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,46 @@ body {
     background-color: #323437;
 }
 
+h1 {
+    display: flex;
+    margin-top: 80px;
+    justify-content: center;
+    align-items: center;
+    color: #e2b714;
+    font-size: 40px;
+    font-family: 'Orbitron', sans-serif;
+}
+
 #container {
     display: flex;
     background-color: #323437;
-    padding: 100px;
+    padding: 80px;
+    justify-content: center;
+    align-items: center;
+}
+
+#control-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 100px;
+    padding: 16px;
+    border-radius: 12px;
+    height: 580px;
+    background-color: #2c2e31;
 }
 
 #color-section {
     display: flex;
-    margin-right: 30px;
+    margin-top: 20px;
+}
+
+#grid-section {
+    background-color: #2c2e31;
+    padding: 32px;
+    border-radius: 12px;
+    padding-bottom: 0;
 }
 
 #grid-container {
@@ -27,21 +58,47 @@ body {
 
 #eraser-button {
     display: block;
+    border: none;
+    border-radius: 50%;
+    background-color: transparent;
+    height: 150px;
+    width: 150px;
+    cursor: pointer;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
-#eraser {
-    width: 20px;
-    height: auto;
+#eraser-button img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
-.slider {
-    color: pink;
+#eraser-button:hover {
+    outline: 2px solid #e2b714;
+}
+
+#clear-button {
+    background-color: #e2b714;
+    border: none;
+    padding: 24px 32px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 8px;
+    color: #323437;
+    margin-bottom: 20px;
+}
+
+#clear-button:hover {
+    background-color: white;
+    transition: ease-in-out .15s;
 }
 
 .color-div {
     outline: 2px solid black;
-    width: 32px;
-    height: 32px;
+    width: 40px;
+    height: 40px;
     margin: 10px;
     cursor: pointer;
 }
@@ -50,4 +107,61 @@ body {
     outline: 1px solid white;
     transform: scale(1.1);
     transition: ease-in-out 0.05s;
+}
+
+#slidecontainer {
+    padding: 20px;
+    height: 60px;
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#slider {
+    appearance: none;
+    width: 150px;
+    cursor: pointer;
+    color: #e2b714;
+    margin-bottom: 8px;
+}
+
+#slider-value {
+    background: transparent;
+    color: #e2b714;
+    border: none;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 20px;
+    margin-left: 16px;
+}
+
+
+input[type="range"]::-webkit-slider-runnable-track {
+    background: #4a4c50;
+    height: 5px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    margin-top: -3px;
+    background: #e2b714;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.hide {
+    display: none;
+}
+
+@media  screen and (max-width: 1024px){
+    html {
+        transform: scale(0.8)
+    }
 }
